appId: com.flyu.aos
---
- launchApp
- extendedWaitUntil:
    visible:
      text: "创建"
    timeout: 10000
- tapOn: "创建"
- extendedWaitUntil:
    visible:
      text: "生成视频"
    timeout: 10000
- assertVisible:
    text: "生成视频"
