appId: com.flyu.aos
---
- launchApp
- extendedWaitUntil:
    visible:
      text: "邮箱登录"
    timeout: 10000
- tapOn: "邮箱登录"
- extendedWaitUntil:
    visible:
      text: ".*账号.*"
    timeout: 10000
- tapOn: ".*账号.*"
- inputText: "cc123@qq.com"
- extendedWaitUntil:
    visible:
      text: ".*密码.*"
    timeout: 10000
- tapOn: ".*密码.*"
- inputText: "123456"
- tapOn: "登录"
- extendedWaitUntil:
    visible:
      text: "首页"
    timeout: 10000
- assertVisible: "首页"
