appId: com.flyu.aos
---
- launchApp
- extendedWaitUntil:
    visible:
      text: "MV studio"
    timeout: 10000
- tapOn: "MV studio"
- extendedWaitUntil:
    visible:
      text: "全部"
    timeout: 10000
- assertVisible: "全部"
- assertVisible: "lite"
- assertVisible: "pro"
- assertVisible: "world"
