appId: com.flyu.aos
---
- launchApp
- extendedWaitUntil:
    visible:
      text: "MV studio"
    timeout: 10000
- tapOn:
    text: "MV studio"
- waitForAnimationToEnd
- assertVisible: "全部"
- assertVisible: "lite"
- assertVisible: "pro"
- assertVisible: "world"
